@@ -1,0 +1,9 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!DOCTYPE mapper PUBLIC "-//mybatis.org//DTD Mapper 3.0//EN" "http://mybatis.org/dtd/mybatis-3-mapper.dtd">
+<mapper namespace="com.agh.hydra.register.dao.PrivilegeRepository">
+
+
+    <select id="getPrivileges" resultType="com.agh.hydra.common.model.FunctionalPrivilege" >
+        select privilege_id from hydra.privilege WHERE user_id = #{userId}
+    </select>
+</mapper>
