@@ -1,3 +1,4 @@
+ - #23 impl for service : GET auth/privileges/{userId}
  - #19 impl user repository
  - #19 rename core module folder
  - #19 impl sign in with google (OAuth 2.0 Bearer Token), secure APIs
